--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "adaptor"]
 	path = tool-plugins/intellij/adaptor
 	url = https://github.com/antlr/jetbrains.git
+[submodule "extensions/docker"]
+	path = extensions/docker
+	url = https://github.com/ballerinax/docker.git
+[submodule "extensions/kubernetes"]
+	path = extensions/kubernetes
+	url = https://github.com/ballerinax/kubernetes.git
