--- a/pom.xml
+++ b/pom.xml
@@ -725,6 +725,17 @@
                 <artifactId>broker-core</artifactId>
                 <version>${broker.version}</version>
             </dependency>
+            <!-- ballerina extensions -->
+            <dependency>
+                <groupId>org.ballerinalang</groupId>
+                <artifactId>docker-extenstion</artifactId>
+                <version>${ballerina.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ballerinalang</groupId>
+                <artifactId>kubernetes-extenstion</artifactId>
+                <version>${ballerina.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -835,6 +846,9 @@
 
                 <module>composer</module>
 
+                <module>extensions/docker</module>
+                <module>extensions/kubernetes</module>
+
                 <module>distribution/docker</module>
                 <module>distribution/zip/ballerina</module>
                 <module>distribution/zip/ballerina-tools</module>
@@ -903,6 +917,9 @@
                 <module>misc/toml-parser</module>
 
                 <module>composer</module>
+
+                <module>extensions/docker</module>
+                <module>extensions/kubernetes</module>
 
                 <module>distribution/docker</module>
                 <module>distribution/zip/ballerina</module>
