--- a/distribution/zip/ballerina/pom.xml
+++ b/distribution/zip/ballerina/pom.xml
@@ -161,11 +161,11 @@
         </dependency>
         <dependency>
             <groupId>org.ballerinalang</groupId>
-            <artifactId>docker-extenstion</artifactId>
+            <artifactId>docker-extension</artifactId>
         </dependency>
         <dependency>
             <groupId>org.ballerinalang</groupId>
-            <artifactId>kubernetes-extenstion</artifactId>
+            <artifactId>kubernetes-extension</artifactId>
         </dependency>
     </dependencies>
 
@@ -184,7 +184,7 @@
                         </goals>
                         <configuration>
                             <includeArtifactIds>
-                                ballerina-builtin,ballerina-http,ballerina-grpc,ballerina-mime,ballerina-logging,ballerina,docker-extenstion,kubernetes-extenstion
+                                ballerina-builtin,ballerina-http,ballerina-grpc,ballerina-mime,ballerina-logging,ballerina,docker-extension,kubernetes-extension
                             </includeArtifactIds>
                             <outputDirectory>${project.build.directory}/extracted-distributions
                             </outputDirectory>
