--- a/distribution/zip/ballerina-tools/pom.xml
+++ b/distribution/zip/ballerina-tools/pom.xml
@@ -94,6 +94,14 @@
             <artifactId>ballerina</artifactId>
             <type>zip</type>
         </dependency>
+        <dependency>
+            <groupId>org.ballerinalang</groupId>
+            <artifactId>docker-extension</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ballerinalang</groupId>
+            <artifactId>kubernetes-extension</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -111,7 +119,7 @@
                         </goals>
                         <configuration>
                             <includeArtifactIds>
-                                composer-server-distribution,ballerina-composer-web,testerina-core,connectors
+                                composer-server-distribution,ballerina-composer-web,testerina-core,connectors,docker-extension,kubernetes-extension
                             </includeArtifactIds>
                             <outputDirectory>${project.build.directory}/extracted-distributions
                             </outputDirectory>
